fix overlapping of nested headings on show page

--- a/src/client/styles/components/SubjectHeadings.scss
+++ b/src/client/styles/components/SubjectHeadings.scss
@@ -332,11 +332,6 @@ a {
   }
 }
 
-.staticDots {
-  margin-top: -20px;
-  margin-bottom: -20px;
-}
-
 .autocomplete {
   float: right;
   font-size: 1rem;
